# hot-plate

./: README.md
electronics/: README.md
electronics/controller/: Project.kicad_sym  README.md  hot-plate-controller.kicad_pcb  hot-plate-controller.kicad_pro  hot-plate-controller.kicad_sch
electronics/controller/Project.pretty/: AP63203WU-7_DIO.kicad_mod  DFN-8-1EP_3x3mm_P0.65mm_EP1.55x2.4mm.kicad_mod  D_SOD-123.kicad_mod  HPC 5040NF-100M.kicad_mod  SMADO-214AC_LEAD-FRAME_MCC-L.kicad_mod  SW_LS38J2F-T.kicad_mod  TERM_BLK_2POS_SIDE_ENTRY_5MM_691137710002.kicad_mod  TO-252-2.kicad_mod  USB_C_Receptacle_GCT_USB4085.kicad_mod
electronics/hot-plate/: Project.kicad_sym  hot-plate.kicad_pcb  hot-plate.kicad_pro  hot-plate.kicad_sch  trace_generator.py
electronics/hot-plate/Project.pretty/: Connector.kicad_mod
firmware/: Cargo.toml
firmware/crates/core/: Cargo.toml
firmware/crates/core/src/: lib.rs
firmware/crates/core/src/hot_plate/: config.rs  mod.rs  peripherals.rs
firmware/crates/core/src/hot_plate/drivers/: cartridge_heater.rs  fan.rs  mod.rs  thermistor.rs
firmware/crates/core/src/hot_plate/hal/: adc.rs  interrupt.rs  mod.rs  pwm.rs  system_time.rs  timer.rs  uart.rs  watchdog.rs
firmware/crates/core/src/hot_plate/process/: mod.rs  (+1 more)
firmware/crates/core/src/utils/: mod.rs
firmware/crates/stm32f7/: Cargo.toml  README.md  build.rs  memory.x
firmware/crates/stm32f7/.cargo/: config.toml
firmware/crates/stm32f7/src/: main.rs
firmware/crates/stm32f7/src/config/: mod.rs
firmware/crates/stm32f7/src/peripherals/: mod.rs  pwm.rs  system_time.rs
(+32 files in other folders)
