[package]
authors = ["AngeloCipriani <angelo13cipriani.03@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f7"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2.0"

stm32f7xx-hal = { version = "0.7", features = ["stm32f730"] }

firmware-core = { path = "../core" }

micromath = "2.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f7"
test = false
bench = false
